# dqm4hep-dream

./: CMakeLists.txt  Readme.md  test.xml
equalisation/: archive-12512.root  archive-12514.root  archive-12518.root  archive-12521.root  archive-12526.root  archive-12528.root  archive-12530.root  archive-12539.root  archive-12545.root  archive-12556.root  archive-12558.root  archive-12560.root  archive-12567.root  archive-12569.root  archive-12591.root  archive-12598.root  archive-12600.root  archive-12601.root  archive-12602.root  archive-12604.root  archive-12607.root  archive-12609.root  archive-12610.root  archive-12612.root  archive-12628.root  archive-12633.root  archive-12636.root  archive-12638.root  archive-12639.root  archive-12659.root  archive-12664.root  archive-12667.root  archive-12669.root  archive-12670.root  archive-12671.root  archive-12672.root  archive-12677.root  eq_template.xml  haddRuns1.sh  haddRuns2.sh  (+14 more)
source/: CMakeLists.txt
source/src/plugins/: DriftChamberDummyModule.cc  DriftChamberFileReader.cc  DriftChamberNtupleReader.cc  ExampleFileReader.cc  ExampleModule.cc  MuonAndPreshowerDummyModule.cc  MuonAndPreshowerFileReader.cc  MuonAndPreshowerMainModule.cc  RD52DummyModule.cc  RD52FileReader.cc  RD52MainModule.cc  RD52NtupleReader.cc  SiPMChannelSpectra.cc  SiPMFileReader.cc  SiPMHitmap.cc
steeringfiles/: dreamsipmhitmap.XML
tests/: dream-RD52-test-electrons.xml  dream-RD52-test-pions.xml  dream-RD52-test.xml  dream-SiPM-hitmap.xml  dream-SiPM-spectra.xml  dream-drift-test.xml  dream-muon-test.xml  simple-test.xml  test-filereader.xml
